fixed herosection mobile

--- a/src/pages/home/sections/heroSection/heroSection.css
+++ b/src/pages/home/sections/heroSection/heroSection.css
@@ -128,7 +128,11 @@
 }
 
 @media screen and (max-width: 500px) {
-    .heroHeadline {
+  .heroSection {
+    height: 80vh;
+  }
+
+  .heroHeadline {
 		margin-top: 4rem;
 		font-size: 3.5rem !important;
 		line-height: 3.5rem;
